# sickplant

./: .dockerignore  .env.example  .gitattributes  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FILE_MANIFEST.md  INDEX.md  Makefile  PRODUCTION_CHECKLIST.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_DEPLOY.md  README.md  STREAMLIT_DEPLOYMENT.md  STREAMLIT_QUICK_START.md  __tmp_cli_head.txt  __tmp_cli_tail.txt  __tmp_train.py  config.yaml  docker-compose.yml  health_check.py  requirements-prod.txt  requirements-streamlit.txt  requirements.txt  setup.cfg  streamlit_app.py  streamlit_readiness_check.py  verify_installation.py
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example  secrets.toml.template
examples/: download_dataset.py  sample_run.ps1  sample_run.sh
kubernetes/: deployment.yaml
scripts/: deploy.ps1  deploy.sh
src/: __init__.py  cli.py
src/eval/: __init__.py  metrics.py
src/explainability/: __init__.py  gradcam.py
src/serve/: __init__.py  app_api.py  app_streamlit.py  model_loader.py
src/utils/: __init__.py  io.py  model_downloader.py
tests/: __init__.py  test_cli.py  test_dataset_utils.py  test_inference.py
