[metadata]
name = plant_disease_detector
version = 1.0.0
author = Plant Disease Detector Team
author_email = contact@plantdiseasedetector.ai
description = End-to-end deep learning tool for plant disease detection
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/plant_disease_detector
project_urls =
    Bug Tracker = https://github.com/yourusername/plant_disease_detector/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Recognition

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1.21.0
    pandas>=1.3.0
    opencv-python>=4.5.0
    Pillow>=9.0.0
    tqdm>=4.62.0
    matplotlib>=3.4.0
    seaborn>=0.11.0
    scikit-learn>=1.0.0
    pyyaml>=6.0
    albumentations>=1.3.0
    torch>=2.0.0
    torchvision>=0.15.0
    timm>=0.9.0
    streamlit>=1.20.0
    tensorboard>=2.12.0
    click>=8.0.0
    python-json-logger>=2.0.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    plant-disease-detector = cli:main

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=22.0.0
    flake8>=4.0.0
    mypy>=0.950

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist,venv
ignore = E203,W503

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --cov=src --cov-report=term-missing
